Fixed firefox button issues (z-index in index.css).

--- a/public/index.css
+++ b/public/index.css
@@ -12,7 +12,6 @@ body{
   left: 0;
   right: 0;
   overflow: hidden;
-  z-index: -1; /* Remove this line if it's not going to be a background! */
   height: 100vh;
   width: 100vw;
 }
